assets/css/oldStyle.css
body{
    font-family: 'Oswald', sans-serif;
    margin-top: 0px;
    color: white;
    text-align: center;
    background: url(../images/working-internet-technology-239898.jpg);
    background-attachment: fixed;
    background-repeat: no-repeat;
    /* background-size: cover; */
}
button{
    font-family: 'Oswald', sans-serif;
    background-color: #32CD32;
    border: none;
    color: white;
    padding: 5px 10px;
    text-align: center;
    text-decoration: none;
    font-size: 16px;
    margin: 4px;
    border-radius: 25px;
    cursor: pointer;
    float: right;
}
h2 {
    margin: 15px 15px 5px;
    color:yellow
}
h3{
    font-family: 'Righteous', cursive;
}
p{
    text-indent: 3%;
    padding: 0% 5%;
    font-size: 1.2rem;
}
ul{
    padding: 0px;
}
li {
    list-style-type: circle;
    list-style-position: inside;  
}
img, .borderfit, .textbox, .profile{
    color: white;
    border: double #32CD32;
    border-radius: 25px;
    background-color: black;
    margin: auto;
}

/* Classes */
.container{
    padding-left: 0px;
    padding-right: 0px;
    margin: 0px;
    width: 100vw;
}
.textbox{
    margin: 0px 5%;
}
.noindent{
    text-indent: 0%
}
.projectImg{
    width: 246px;
    height: 246px;
}
.borderfit{
    padding: 0% 1%;
    width: fit-content;
}
.spaceBelow{
    margin-bottom: 20px;
}
.sidePad{
    padding-left: 10px;
    padding-right: 10px;
}
.center{
    text-align: center;
    align-content: center;
}
.fullWide{
    width: 100vw;
    margin: 0px;
}
.title{
    margin: auto;
    text-align: center;
}
.row{
    width: 100vw;
}

/* IDs */
#blackBox{
  background-color: black;
  opacity: 0.5;
  height:100vh;
  width:100vw;
  position: fixed;
  z-index: -1;
  margin:0px;
}
#aboutBtn,#contactBtn,#galleryBtn{
    position: fixed;
    top: 0px;
    z-index: 50;
    right: 0px;
}
#aboutBtn{
    right: 139px;
}
#contactBtn{
    right: 72px;
}
/* #galleryBtn{

} */
#indexContainer{
    padding-top: 16px;
}
#galleryContainer{
    padding-top: 41px;
    width: 100vw;
}

